<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/idEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/id_hint"
            android:ems="10"
            android:hint="@string/id_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/descriptionEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/description_hint"
            android:ems="10"
            android:hint="@string/description_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/priceEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/price_hint"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/price_hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/updateButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_button" />

        <Button
            android:id="@+id/searchByIdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_id_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/searchByDescriptionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_description_button" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>